lower-case title to avoid error in vs code

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "The-Dixons",
+  "name": "the-dixons",
   "version": "1.0.0",
   "description": "A Colonial Quaker Family",
   "main": "_site/index.html",
