--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@11ty/eleventy-navigation": "^0.1.4",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "avatar-local-cache": "^2.0.3",
     "clean-css": "^4.2.1",
     "dotenv": "^8.2.0",
     "flat-cache": "^2.0.1",
@@ -50,6 +49,7 @@
   },
   "dependencies": {
     "@11ty/logo": "^2.0.2",
+    "acorn": "^7.1.1",
     "instant.page": "^1.2.2",
     "prismjs": "^1.16.0"
   }
