--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "clean-css": "^4.2.1",
     "dotenv": "^8.2.0",
+    "eleventy-plugin-lazyimages": "^1.0.5",
     "flat-cache": "^2.0.1",
     "fs-extra": "^8.1.0",
     "html-minifier": "^3.5.21",
